<resources>
    <string name="app_name">MyProjectWork</string>
    <string name="LoginButton">Login</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="SignUpLink">Sign up</string>
    <string name="buytext">Buy</string>
    <string name="booktext">Books</string>
    <string name="welcomemsg">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>